--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,7 @@ tzdata==2023.3
 urllib3==2.1.0
 uvicorn==0.24.0.post1
 websockets==12.0
+matplotlib==3.8.2
+termcolor==2.4.0
+tabulate==0.9.0
+python-dotenv==1.0.1
