--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 contourpy==1.2.0
 cycler==0.12.1
-fastapi==0.104.1
+fastapi==0.111.0
 fonttools==4.47.0
 h11==0.14.0
 idna==3.6
@@ -25,7 +25,6 @@ pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
-starlette==0.27.0
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.1.0
@@ -36,3 +35,5 @@ termcolor==2.4.0
 tabulate==0.9.0
 python-dotenv==1.0.1
 pylint==3.2.3
+python-dotenv==1.0.1
+python-multipart==0.0.9
