--- a/.pylintrc
+++ b/.pylintrc
@@ -440,7 +440,8 @@ disable=raw-checker-failed,
         missing-function-docstring,
         too-many-arguments,
         too-few-public-methods,
-        too-many-instance-attributes
+        too-many-instance-attributes,
+        c-extension-no-member
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
