update: pylint and error check after pre-execution

--- a/.pylintrc
+++ b/.pylintrc
@@ -441,7 +441,8 @@ disable=raw-checker-failed,
         too-many-arguments,
         too-few-public-methods,
         too-many-instance-attributes,
-        c-extension-no-member
+        c-extension-no-member,
+        duplicate-code
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
