--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 annotated-types==0.6.0
 anyio==3.7.1
-certifi==2023.11.17
+certifi>=2024.07.04
 charset-normalizer==3.3.2
 click==8.1.7
 contourpy==1.2.0
